--- a/.env.example
+++ b/.env.example
@@ -90,3 +90,11 @@ AWS_S3_BUCKET="leadsrapido-backups"
 AWS_ACCESS_KEY_ID="your-aws-access-key"
 AWS_SECRET_ACCESS_KEY="your-aws-secret-key"
 AWS_REGION="us-east-1"
+
+# Supabase Configuration (Frontend)
+# Para monitoramento de workers em tempo real
+VITE_SUPABASE_URL=your_supabase_project_url
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# API Configuration
+VITE_API_BASE_URL=http://localhost:3000
