--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint . --fix",
     "preview": "vite preview",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --ui",
     "server:dev": "tsx watch server/src/index.ts",
     "server:build": "tsc --project server/tsconfig.json",
     "server:start": "node server/dist/index.js",
@@ -59,7 +63,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.57.0",
-    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
@@ -74,6 +78,7 @@
     "fastify-plugin": "^5.0.1",
     "input-otp": "^1.4.2",
     "ioredis": "^5.4.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "pg": "^8.16.3",
@@ -84,6 +89,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
@@ -96,16 +102,24 @@
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.7.0",
     "@vitejs/plugin-react-swc": "^3.11.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
+    "jsdom": "^27.0.0",
     "lovable-tagger": "^1.1.9",
     "postcss": "^8.5.6",
     "prisma": "^6.1.0",
@@ -113,6 +127,7 @@
     "tsx": "^4.19.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "vitest": "^3.2.4"
   }
 }
