--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,40 @@ JWT_SECRET="your-jwt-secret-here-change-in-production"
 JWT_EXPIRES_IN="24h"
 JWT_REFRESH_EXPIRES_IN="7d"
 
+# Frontend Environment Variables
+# ===============================
+
+# API Configuration
+VITE_API_BASE_URL=https://your-api-domain.com/api/v1
+
+# Authentication Configuration
+# Choose appropriate key names for your environment
+VITE_AUTH_TOKEN_KEY=your_auth_token_key
+VITE_REFRESH_TOKEN_KEY=your_refresh_token_key
+VITE_DEVICE_ID_KEY=your_device_id_key
+
+# Permissions & Session Configuration
+# Adjust timeouts based on your security requirements
+VITE_PERMISSIONS_CACHE_TTL=300000   # 5 minutes (development) / 600000 (production)
+VITE_SESSION_REFRESH_INTERVAL=60000 # 1 minute (development) / 300000 (production)
+
+# Security Configuration (production only)
+VITE_SECURE_COOKIES=true
+VITE_SAMESITE_COOKIES=strict
+
+# Environment Indicator
+VITE_ENVIRONMENT=development # development | staging | production
+VITE_APP_VERSION=1.0.0
+
+# Monitoring & Analytics (optional)
+VITE_ENABLE_ANALYTICS=false # true in production
+VITE_ENABLE_ERROR_TRACKING=false # true in production
+
+# Performance Configuration (optional)
+VITE_CACHE_TIMEOUT=1800000  # 30 minutes
+VITE_MAX_RETRIES=3
+VITE_REQUEST_TIMEOUT=15000  # 15 seconds
+
 # Multi-tenant Configuration
 DEFAULT_ORGANIZATION_QUOTA=1000
 LEAD_ACCESS_COST=2.50
