--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@fastify/rate-limit": "^10.1.0",
     "@fastify/swagger": "^9.4.0",
     "@fastify/swagger-ui": "^5.0.1",
+    "@fingerprintjs/fingerprintjs-pro": "^3.12.2",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-accordion": "^1.2.11",
