--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "db:deploy": "prisma migrate deploy"
   },
   "dependencies": {
-    "@copilotkit/react-core": "^1.10.6",
-    "@copilotkit/react-ui": "^1.10.6",
-    "@copilotkit/runtime-client-gql": "^1.10.6",
+    "@copilotkit/react-core": "1.10.6",
+    "@copilotkit/react-ui": "1.10.6",
+    "@copilotkit/runtime-client-gql": "1.10.6",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -137,6 +137,7 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vitest": "^3.2.4"
   }
 }
