--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:vendas": "TENANT_PORT=8080 vite --port 8080",
-    "dev:publix": "TENANT_PORT=8081 vite --port 8081",
-    "dev:both": "concurrently \"npm run dev:vendas\" \"npm run dev:publix\"",
+    "dev:vendas-ia": "TENANT_PORT=3000 vite --port 3000",
+    "dev:publix": "TENANT_PORT=3001 vite --port 3001",
+    "dev:disparo-rapido": "TENANT_PORT=3002 vite --port 3002",
+    "dev:lean-quality": "TENANT_PORT=3003 vite --port 3003",
+    "dev:ph3a": "TENANT_PORT=3004 vite --port 3004",
+    "dev:all": "concurrently \"npm run dev:vendas-ia\" \"npm run dev:publix\" \"npm run dev:disparo-rapido\" \"npm run dev:lean-quality\" \"npm run dev:ph3a\"",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint . --fix",
