feat: uiux melhorzim

--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@supabase/supabase-js": "^2.57.0",
+    "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "5.89",
     "@tanstack/react-table": "^8.21.3",
     "axios": "1.11",
@@ -114,11 +114,11 @@
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query-devtools": "5.89.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@tanstack/react-query-devtools": "5.89.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
@@ -134,6 +134,7 @@
     "globals": "^15.15.0",
     "jsdom": "^27.0.0",
     "lovable-tagger": "^1.1.9",
+    "msw": "^2.12.7",
     "postcss": "^8.5.6",
     "prisma": "^6.1.0",
     "tailwindcss": "^3.4.17",
