--- a/package.json
+++ b/package.json
@@ -4,13 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "dev:vendas-ia": "TENANT_PORT=3000 vite --port 3000",
-    "dev:publix": "TENANT_PORT=3001 vite --port 3001",
-    "dev:disparo-rapido": "TENANT_PORT=3002 vite --port 3002",
-    "dev:lean-quality": "TENANT_PORT=3003 vite --port 3003",
-    "dev:ph3a": "TENANT_PORT=3004 vite --port 3004",
-    "dev:all": "concurrently \"npm run dev:vendas-ia\" \"npm run dev:publix\" \"npm run dev:disparo-rapido\" \"npm run dev:lean-quality\" \"npm run dev:ph3a\"",
+    "dev": "cross-env TENANT_PORT=3002 vite --port 3002",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint . --fix",
@@ -128,6 +122,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
+    "cross-env": "^10.1.0",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
